# Casperr

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  CONGRATULATIONS.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  FAQ.md  FINAL_SUMMARY.txt  HACKATHON_SUBMISSION.md  LICENSE  NEXT_STEPS.md  PITCH.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SETUP_COMPLETE.md  START_HERE.md  SYSTEM_FLOW.md  WINDOWS_DEPLOYMENT.md  codespace-setup.sh  wsl-setup.sh
.github/workflows/: test.yml
contracts/: Cargo.toml  README.md
contracts/src/: escrow.rs  lib.rs  reputation.rs  types.rs
contracts/tests/: escrow_tests.rs
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CreateProject.tsx  Header.tsx  Icons.tsx  Logo.tsx  ProjectDetail.tsx  ProjectList.tsx
